--- a/src/sass/global/_setting.scss
+++ b/src/sass/global/_setting.scss
@@ -2,34 +2,41 @@
 
 // インナー幅設定
 // コンテンツのインナー幅（最も共通の幅が多い部分）
-$inner: 1100px;
+$inner: 1080px;
 // ※キュンパス幅ではなくインナーの幅を指す
 
 // 余白
-$padding-pc: 25px;
-$padding-sp: 20px;
+$padding-pc: 180px;
+$padding-sp: 15px;
 
 ////////////////////
 // フォント設定
 ////////////////////
 
-$base-font-family: "";
-$second-font-family: "";
+$font-family-eng: 'Gotu', sans-serif;
+$font-family-jp-sans: 'Noto Sans JP', sans-serif;
 // ※検証ツールでしっかり反映されているか確認する
 
 body {
-  font-family: $base-font-family;
+  font-family: $font-family-jp-sans;
 }
 
 // フォントウェイト
-$regular: 300;
-$normal: 400;
-$bold: 700;
+$font-weight-regular: 400;
+$font-weight-medium: 500;
+$font-weight-bold: 700;
 
 ////////////////////
 // 色の指定
 ////////////////////
 
 //色指定（共通性のあるものは出来る限り指定すると良い）
-$black: #111;
-$white: #fff;
+$color-black: #0D2936;
+$color-white: #fff;
+
+$color-accent: #408F95;
+$color-brown: #796A64;
+
+$color-gray: #000;
+$color-lightgreen: #DDF0F1;
+$color-text: $color-black;
