card-campaign：完了

--- a/src/sass/global/_setting.scss
+++ b/src/sass/global/_setting.scss
@@ -15,6 +15,7 @@ $padding-sp: 15px;
 
 $font-family-eng: 'Gotu', sans-serif;
 $font-family-jp-sans: 'Noto Sans JP', sans-serif;
+$font-family-lato: 'Lato', sans-serif;
 // ※検証ツールでしっかり反映されているか確認する
 
 body {
