--- a/src/sass/module/_card-campaign.scss
+++ b/src/sass/module/_card-campaign.scss
@@ -1,6 +1,6 @@
 @use "global" as *;
 
-.card {
+.card-campaign {
 	box-shadow: 2px 2px 10px rgb(0 0 0 / 0.25);
 	width: rem(280);
 	max-width: 100%;
@@ -10,7 +10,7 @@
 	}
 }
 
-.card__img {
+.card-campaign__img {
 	aspect-ratio: 280 / 188;
 
 	@include mq('md') {
@@ -18,13 +18,13 @@
 	}
 }
 
-.card__img img {
+.card-campaign__img img {
 	object-fit: cover;
 	width: 100%;
 	height: 100%;
 }
 
-.card__body {
+.card-campaign__body {
 	padding: rem(16) rem(16) rem(24);
 	background-color: $color-white;
 
@@ -33,7 +33,7 @@
 	}
 }
 
-.card__category {
+.card-campaign__category {
 	padding: rem(9) rem(12);
 	display: inline-block;
 	border: 1px solid $color-accent;
@@ -50,7 +50,7 @@
 	}
 }
 
-.card__title {
+.card-campaign__title {
 	margin-top: rem(4);
 	padding-bottom: rem(8);
 	position: relative;
@@ -63,7 +63,7 @@
 	color: $color-text;
 }
 
-.card__title::after {
+.card-campaign__title::after {
 	position: absolute;
 	content: "";
 	bottom: 0;
@@ -73,7 +73,7 @@
 	background-color: $color-accent;
 }
 
-.card__offer {
+.card-campaign__offer {
 	margin-top: rem(8);
 	text-align: center;
 
@@ -90,7 +90,7 @@
 	}
 }
 
-.card__wrap {
+.card-campaign__wrap {
 	margin-top: rem(8);
 	display: flex;
 	align-items: baseline;
@@ -102,7 +102,7 @@
 	}
 }
 
-.card__original-price {
+.card-campaign__original-price {
 	position: relative;
 
 	font-family: $font-family-lato;
@@ -128,7 +128,7 @@
 	transform: translateY(-50%);
 }
 
-.card__salet-price {
+.card-campaign__sale-price {
 	font-family: $font-family-lato;
 	font-size: rem(32);
 	font-weight: $font-weight-bold;
