--- a/src/sass/module/_blog-card.scss
+++ b/src/sass/module/_blog-card.scss
@@ -71,11 +71,4 @@
 	margin-top: rem(16);
 }
 
-.blog-card__text p {
-	font-family: $font-family-jp-sans;
-	font-size: rem(16);
-	font-weight: $font-weight-regular;
-	letter-spacing: 0;
-	line-height: calc(24 / 16);
-	color: $color-text;
-}
+.blog-card__text-text {}
