--- a/src/sass/module/_campaign-card.scss
+++ b/src/sass/module/_campaign-card.scss
@@ -1,6 +1,6 @@
 @use "global" as *;
 
-.card-campaign {
+.campaign-card {
 	box-shadow: 2px 2px 10px rgb(0 0 0 / 0.25);
 	width: rem(280);
 	max-width: 100%;
@@ -10,7 +10,7 @@
 	}
 }
 
-.card-campaign__img {
+.campaign-card__img {
 	aspect-ratio: 280 / 188;
 
 	@include mq('md') {
@@ -18,13 +18,13 @@
 	}
 }
 
-.card-campaign__img img {
+.campaign-card__img img {
 	object-fit: cover;
 	width: 100%;
 	height: 100%;
 }
 
-.card-campaign__body {
+.campaign-card__body {
 	padding: rem(16) rem(16) rem(24);
 	background-color: $color-white;
 
@@ -33,37 +33,33 @@
 	}
 }
 
-.card-campaign__category {
+.campaign-card__category {
 	padding: rem(9) rem(12);
 	display: inline-block;
 	border: 1px solid $color-accent;
 
-	font-family: $font-family-jp-sans;
-	font-size: rem(12);
-	font-weight: $font-weight-regular;
-	letter-spacing: 0;
-	line-height: 1;
-	color: $color-accent;
 
 	@include mq('md') {
 		padding: rem(13) rem(14);
 	}
 }
 
-.card-campaign__title {
+.campaign-card__category-text {
+	font-family: $font-family-jp-sans;
+	font-size: rem(12);
+	font-weight: $font-weight-regular;
+	letter-spacing: 0;
+	line-height: 1;
+	color: $color-accent;
+}
+
+.campaign-card__title {
 	margin-top: rem(4);
 	padding-bottom: rem(8);
 	position: relative;
-
-	font-family: $font-family-jp-sans;
-	font-size: rem(16);
-	font-weight: $font-weight-medium;
-	letter-spacing: 0;
-	line-height: calc(24 / 16);
-	color: $color-text;
 }
 
-.card-campaign__title::after {
+.campaign-card__title::after {
 	position: absolute;
 	content: "";
 	bottom: 0;
@@ -73,7 +69,9 @@
 	background-color: $color-accent;
 }
 
-.card-campaign__offer {
+.campaign-card__title-text {}
+
+.campaign-card__offer {
 	margin-top: rem(8);
 	text-align: center;
 
@@ -90,7 +88,7 @@
 	}
 }
 
-.card-campaign__wrap {
+.campaign-card__wrap {
 	margin-top: rem(8);
 	display: flex;
 	align-items: baseline;
@@ -102,22 +100,24 @@
 	}
 }
 
-.card-campaign__original-price {
+.campaign-card__original-price {
 	position: relative;
-
-	font-family: $font-family-lato;
-	font-size: rem(20);
-	font-weight: $font-weight-bold;
-	letter-spacing: 0;
-	line-height: 1;
-	color: $color-text;
 
 	@include mq('md') {
 		font-size: rem(24);
 	}
 }
 
-.card__original-price::after {
+.campaign-card__original-price-text {
+	font-family: $font-family-lato;
+	font-size: rem(20);
+	font-weight: $font-weight-bold;
+	letter-spacing: 0;
+	line-height: 1;
+	color: $color-text;
+}
+
+.campaign-card__original-price::after {
 	position: absolute;
 	content: "";
 	top: 50%;
@@ -128,7 +128,9 @@
 	transform: translateY(-50%);
 }
 
-.card-campaign__sale-price {
+.campaign-card__sale-price {}
+
+.campaign-card__sale-price-text {
 	font-family: $font-family-lato;
 	font-size: rem(32);
 	font-weight: $font-weight-bold;
