header, hamburger：完了、 drawer：未完成

--- a/src/sass/global/_setting.scss
+++ b/src/sass/global/_setting.scss
@@ -41,3 +41,12 @@ $color-brown: #796A64;
 $color-gray: #000;
 $color-lightgreen: #DDF0F1;
 $color-text: $color-black;
+
+
+////////////////////
+// z-index
+////////////////////
+$z-index-header: 1000;
+$z-index-sp-nav: 2000;
+$z-index-logoBlock: 2800;
+$z-index-hamburger: 2900;
