--- a/src/sass/module/_button.scss
+++ b/src/sass/module/_button.scss
@@ -8,9 +8,26 @@
 	padding: rem(29) rem(90) rem(29) rem(42);
 	// border: none;
 	background-color: $color-accent;
+	border: 1px solid $color-accent;
 
 	font-size: 26px;
 	font-weight: bold;
+
+	transition: background-color 0.3s;
+
+}
+
+.button:hover {
+	background-color: $color-white;
+
+	p {
+		color: $color-accent;
+	}
+
+	p::after,
+	p::before {
+		background-color: $color-accent;
+	}
 
 }
 
@@ -21,11 +38,9 @@
 	width: 100%;
 	height: 100%;
 	border: 1px solid $color-accent;
-	transition: .3s;
 	content: '';
 	z-index: -1;
 }
-
 
 .button p {
 	position: relative;
@@ -36,27 +51,34 @@
 	letter-spacing: 0;
 	line-height: 0;
 	color: $color-white;
+
+	transition: color 0.3s ease;
+
+}
+
+.button p::before,
+.button p::after {
+	position: absolute;
+	content: "";
+	background-color: $color-white;
+	border-radius: 50%;
+	transition: background-color 0.3s ease;
 }
 
 .button p::before {
-	position: absolute;
-	content: "";
+
 	width: 40px;
 	height: 1px;
 	top: 0;
 	left: calc(100% + 8px);
-	background-color: $color-white;
-	border-radius: 50%;
+	transition: background-color 0.3s ease;
+
 }
 
 .button p::after {
-	position: absolute;
-	content: "";
 	width: 8px;
 	height: 1px;
 	top: -2px;
 	left: calc(100% + 41px);
-	background-color: $color-white;
-	border-radius: 50%;
 	transform: rotate(37deg);
 }
