--- a/src/sass/module/_campaign-card.scss
+++ b/src/sass/module/_campaign-card.scss
@@ -2,11 +2,12 @@
 
 .campaign-card {
 	box-shadow: 2px 2px 10px rgb(0 0 0 / 0.25);
-	width: rem(280);
-	max-width: 100%;
+	// width: rem(280);
+	// max-width: 100%;
 
 	@include mq('md') {
-		width: rem(333);
+		// width: rem(333);
+		max-width: rem(334);
 	}
 }
 
