--- a/src/sass/module/_blog-cards.scss
+++ b/src/sass/module/_blog-cards.scss
@@ -1,12 +1,14 @@
 @use "global" as *;
 
 .blog-cards {
-	display: grid;
-	grid-template-columns: 100%;
-	row-gap: rem(40);
+	// display: grid;
+	// grid-template-columns: 100%;
+	// row-gap: rem(40);
 
 	@include mq('md') {
-		grid-template-columns: repeat(auto-fit, rem(333));
+		// grid-template-columns: repeat(auto-fit, rem(333));
+		// grid-template-columns: 1fr 1fr 1fr;
+		display: flex;
 		row-gap: rem(80);
 		column-gap: rem(40);
 	}
