--- a/src/sass/module/_voice-card.scss
+++ b/src/sass/module/_voice-card.scss
@@ -4,11 +4,13 @@
 	padding: rem(15) rem(16) rem(24);
 	box-shadow: 2px 2px 10px rgba($color: #000, $alpha: 0.25);
 	width: 100%;
+	max-width: rem(345);
 
 	@include mq('md') {
 		padding: rem(24);
-		width: rem(520);
-		max-width: 100%;
+		// width: rem(520);
+		max-width: rem(520);
+		// max-width: 100%;
 	}
 }
 
@@ -20,7 +22,8 @@
 }
 
 .voice-card__left {
-	width: calc(100% - rem(13) - rem(151));
+	// width: calc(100% - rem(13) - rem(151));
+	width: calc(149 / 313 * 100%);
 
 	@include mq('md') {
 		width: calc(100% - rem(16) - rem(180));
@@ -104,12 +107,13 @@
 }
 
 .voice-card__right {
-	margin-left: rem(13);
+	// margin-left: rem(13);
 	// width: calc(151 / 313 * 100%);
-	height: rem(117);
+	width: calc(151 / 313 * 100%);
+	// height: rem(117);
 
 	@include mq('md') {
-		margin-left: rem(16);
+		// margin-left: rem(16);
 	}
 }
 
@@ -137,4 +141,9 @@
 
 .voice-card__text {}
 
-.voice-card__text-text {}
+.voice-card__text-text {
+	display: -webkit-box;
+	overflow: hidden;
+	-webkit-box-orient: vertical;
+	-webkit-line-clamp: 7;
+}
