レスポンシブ修正

--- a/src/sass/module/_blog-cards.scss
+++ b/src/sass/module/_blog-cards.scss
@@ -1,15 +1,17 @@
 @use "global" as *;
 
 .blog-cards {
-	// display: grid;
-	// grid-template-columns: 100%;
-	// row-gap: rem(40);
+	max-width: rem(333);
+	margin-left: auto;
+	margin-right: auto;
 
 	@include mq('md') {
-		// grid-template-columns: repeat(auto-fit, rem(333));
-		// grid-template-columns: 1fr 1fr 1fr;
 		display: flex;
-		row-gap: rem(80);
 		column-gap: rem(40);
+		justify-content: space-between;
+
+		max-width: initial;
+		margin-left: initial;
+		margin-right: initial;
 	}
 }
