--- a/src/sass/page/_info.scss
+++ b/src/sass/page/_info.scss
@@ -17,10 +17,16 @@
 
 .info__wrap {
 	margin-top: rem(24);
+	max-width: rem(345);
+	margin-left: auto;
+	margin-right: auto;
 
 	@include mq('md') {
 		display: flex;
 		column-gap: rem(48);
+		max-width: initial;
+		margin-left: initial;
+		margin-right: initial;
 	}
 }
 
