--- a/src/sass/global/_setting.scss
+++ b/src/sass/global/_setting.scss
@@ -6,8 +6,17 @@ $inner: 1080px;
 // ※キュンパス幅ではなくインナーの幅を指す
 
 // 余白
-$padding-pc: 180px;
+$padding-pc: 40px;
 $padding-sp: 15px;
+
+// // インナー幅設定
+// // コンテンツのインナー幅（最も共通の幅が多い部分）
+// $inner: 1200px;
+// // ※キュンパス幅ではなくインナーの幅を指す
+
+// // 余白
+// $padding-pc: 40px;
+// $padding-sp: 16px;
 
 ////////////////////
 // フォント設定
