--- a/src/sass/module/_voice-card.scss
+++ b/src/sass/module/_voice-card.scss
@@ -3,26 +3,24 @@
 .voice-card {
 	padding: rem(15) rem(16) rem(24);
 	box-shadow: 2px 2px 10px rgba($color: #000, $alpha: 0.25);
-	width: 100%;
-	max-width: rem(345);
 
 	@include mq('md') {
 		padding: rem(24);
-		// width: rem(520);
-		max-width: rem(520);
-		// max-width: 100%;
 	}
 }
 
 .voice-card__head {
 	display: flex;
-	// column-gap: rem(13);
 	justify-content: space-between;
 	align-items: flex-end;
+	column-gap: rem(13);
+
+	@include mq('md') {
+		column-gap: rem(16);
+	}
 }
 
 .voice-card__left {
-	// width: calc(100% - rem(13) - rem(151));
 	width: calc(149 / 313 * 100%);
 
 	@include mq('md') {
