--- a/src/sass/module/_voice-cards.scss
+++ b/src/sass/module/_voice-cards.scss
@@ -1,12 +1,19 @@
 @use "global" as *;
 
 .voice-cards {
+	max-width: rem(345);
+	margin-left: auto;
+	margin-right: auto;
+
 	display: flex;
-	// flex-direction: column;
-	align-items: center;
+	flex-direction: column;
 	row-gap: rem(40);
 
 	@include mq('md') {
+		max-width: initial;
+		margin-left: initial;
+		margin-right: initial;
+
 		flex-direction: row;
 		row-gap: rem(80);
 		column-gap: rem(40);
