--- a/src/sass/page/_price.scss
+++ b/src/sass/page/_price.scss
@@ -17,9 +17,15 @@
 
 .price__wrap {
 	margin-top: rem(24);
+	max-width: rem(345);
+	margin-left: auto;
+	margin-right: auto;
 
 	@include mq('md') {
 		margin-top: rem(40);
+		max-width: initial;
+		margin-left: initial;
+		margin-right: initial;
 
 		display: flex;
 		flex-direction: row-reverse;
