--- a/src/sass/page/_contact.scss
+++ b/src/sass/page/_contact.scss
@@ -7,6 +7,22 @@
 	@include mq('md') {
 		margin-top: rem(140);
 		margin-bottom: rem(160);
+		position: relative;
+	}
+}
+
+.contact::before {
+	@include mq('md') {
+		position: absolute;
+		content: "";
+		top: rem(-40);
+		right: max(rem(20), 50vw - rem(670));
+		width: rem(301);
+		height: rem(138);
+		background-image: url('../images/common/img-fish.svg');
+		background-repeat: no-repeat;
+		background-size: contain;
+		background-position: center center;
 	}
 }
 
@@ -17,13 +33,15 @@
 	@include mq('md') {
 		padding-top: rem(80);
 		padding-bottom: rem(80);
-		padding-left: rem(50);
-		padding-right: rem(112);
+		// padding-left: rem(50);
+		// padding-right: rem(112);
+		padding-left: calc(50 / 1080 * 100%);
+		padding-right: calc(112 / 1080 * 100%);
 
 		display: flex;
 		justify-content: space-between;
-		box-shadow: 0 4px 4px rgba($color: #000, $alpha: 0.25);
 		position: relative;
+		box-shadow: 0 4px 4px rgba($color: #000, $alpha: 0.25);
 	}
 }
 
@@ -31,14 +49,14 @@
 	position: absolute;
 	content: "";
 	width: 1px;
-	height: calc(255 / 415 * 100%);
-	// height: 100%;
-	// padding-top: rem(80);
-	// padding-bottom: rem(80);
+	// height: calc(255 / 415 * 100%);
+	height: rem(255);
 	background-color: $color-accent;
-	// top: 50%;
-	left: calc(572 / 1080 * 100%);
-	// transform: translateY(-50%);
+	top: 50%;
+	left: 53%;
+	transform: translateY(-50%);
+	// top: calc(70 / 415 * 100%);
+	// left: calc(572 / 1080 * 100%);
 }
 
 .contact__top {
@@ -50,7 +68,11 @@
 		max-width: initial;
 		margin-left: initial;
 		margin-right: initial;
-		min-width: rem(440);
+		// padding-right: rem(82);
+		// padding-right: calc(83 / 1080 * 100%);
+		max-width: rem(440);
+		// position: relative;
+		// width: calc(440 / 1080 * 100%);
 	}
 }
 
@@ -130,7 +152,9 @@
 
 	@include mq('md') {
 		margin-top: rem(20);
-		padding-left: rem(81);
+		// padding-left: rem(81);
+		// padding-left: calc(80 / 1080 * 100%);
+		max-width: rem(315);
 	}
 }
 
