campaign(swiper)：完了

--- a/src/sass/page/_about.scss
+++ b/src/sass/page/_about.scss
@@ -67,8 +67,8 @@
 	}
 }
 
-.about__image-large img,
-.about__image-small img {
+.about__image-large picture,
+.about__image-small picture {
 	object-fit: cover;
 	width: 100%;
 	height: 100%;
