--- a/src/sass/module/_campaign-card.scss
+++ b/src/sass/module/_campaign-card.scss
@@ -2,12 +2,10 @@
 
 .campaign-card {
 	box-shadow: 2px 2px 10px rgb(0 0 0 / 0.25);
-	// width: rem(280);
-	// max-width: 100%;
+	width: rem(280);
 
 	@include mq('md') {
-		// width: rem(333);
-		max-width: rem(334);
+		width: rem(333);
 	}
 }
 
@@ -99,15 +97,6 @@
 	}
 }
 
-.campaign-card__original-price-text {
-	font-family: $font-family-lato;
-	font-size: rem(20);
-	font-weight: $font-weight-bold;
-	letter-spacing: 0;
-	line-height: 1;
-	color: $color-text;
-}
-
 .campaign-card__original-price::after {
 	position: absolute;
 	content: "";
@@ -118,6 +107,16 @@
 	background-color: #C94800;
 	transform: translateY(-50%);
 }
+
+.campaign-card__original-price-text {
+	font-family: $font-family-lato;
+	font-size: rem(20);
+	font-weight: $font-weight-bold;
+	letter-spacing: 0;
+	line-height: 1;
+	color: $color-text;
+}
+
 
 .campaign-card__sale-price {}
 
