--- a/src/sass/module/_hamburger.scss
+++ b/src/sass/module/_hamburger.scss
@@ -17,7 +17,7 @@
 	position: absolute;
 	width: 100%;
 	height: 1px;
-	background-color: $color-black;
+	background-color: $color-white;
 	border-radius: 50%;
 	transition: transform 0.3s ease, opacity 0.3s ease;
 
