--- a/src/sass/page/_header.scss
+++ b/src/sass/page/_header.scss
@@ -18,21 +18,28 @@
 	max-width: rem(1440);
 	margin-left: auto;
 	margin-right: auto;
-	padding-left: rem(36);
+	padding-left: rem(15);
 	padding-right: rem(21);
 
 	display: flex;
 	justify-content: space-between;
 	align-items: center;
 	height: inherit;
+
+	@include mq('md') {
+		padding-left: rem(36);
+		padding-right: rem(21);
+
+	}
 }
 
 .header__logoBlock {
 	height: inherit;
-	z-index: $z-index-logoBlock;
+	// z-index: $z-index-logoBlock;
 }
 
 .header__logoLink {
+	// display: inline-block;
 	height: inherit;
 }
 
@@ -49,6 +56,7 @@
 }
 
 .header__drawer {
+
 	@include mq('md') {
 		display: none;
 	}
@@ -63,4 +71,6 @@
 	}
 }
 
-.header__sp-nav {}
+.header__sp-nav {
+	padding-bottom: $padding-sp
+}
