--- a/src/sass/page/_sp-nav.scss
+++ b/src/sass/page/_sp-nav.scss
@@ -22,27 +22,27 @@
 	opacity: 1;
 }
 
-.sp-nav__inner {
-	// width: rem(345);
-	// max-width: 100%;
-	// margin-left: auto;
-	// margin-right: auto;
-	// height: inherit;
+.sp-nav__logoBlock {
+	margin-top: rem(21);
+	margin-left: rem(15);
 }
 
+.sp-nav__logoLink {}
+
+.sp-nav__logo {}
+
+.sp-nav__inner {}
+
 .sp-nav__wrap {
-	padding-top: rem(21);
-	padding-bottom: rem(21);
-	// display: flex;
-	// flex-direction: column;
-	// align-items: center;
+	margin-top: calc(rem(45) + (100vh - rem(667)) * 0.5);
+	display: flex;
+	align-items: center;
+	justify-content: space-around;
 }
 
 .sp-nav__head {}
 
-.sp-nav__logoBlock {
-	display: flex;
-}
+.sp-nav__logoBlock {}
 
 .sp-nav__logoLink {}
 
@@ -54,9 +54,7 @@
 	}
 }
 
-.sp-nav__body {
-	margin-top: rem(45);
-}
+.sp-nav__body {}
 
 .sp-nav__menu-items {
 	display: grid;
@@ -64,7 +62,7 @@
 	grid-template-rows: 1fr 1fr;
 
 	row-gap: rem(40);
-	column-gap: rem(6);
+	column-gap: min(calc(rem(6) + (100vw - rem(375)) * 0.5), rem(40));
 	grid-auto-flow: column;
 }
 
