--- a/src/sass/base/_reset.scss
+++ b/src/sass/base/_reset.scss
@@ -28,7 +28,7 @@ dd {
 
 /* Set core root defaults */
 html {
-  scroll-behavior: smooth;
+  // scroll-behavior: smooth;
 }
 
 /* Set core body defaults */
@@ -57,7 +57,7 @@ img {
 }
 
 /* Natural flow and rhythm in articles by default */
-article > * + * {
+article>*+* {
   margin-top: 1em;
 }
 
