--- a/src/sass/page/_campaign.scss
+++ b/src/sass/page/_campaign.scss
@@ -1,7 +1,8 @@
 @use "global" as *;
 
 .campaign {
-	margin-top: rem(40);
+	padding-top: rem(40);
+	padding-bottom: rem(3);
 
 	@include mq('md') {
 		margin-top: rem(120);
