--- a/src/sass/page/_voice.scss
+++ b/src/sass/page/_voice.scss
@@ -1,8 +1,8 @@
 @use "global" as *;
 
 .voice {
-	margin-top: rem(80);
-	margin-bottom: rem(140);
+	padding-top: rem(80);
+	padding-bottom: rem(140);
 
 	@include mq('md') {
 		margin-top: rem(140);
