--- a/src/sass/module/_img-animation.scss
+++ b/src/sass/module/_img-animation.scss
@@ -4,7 +4,9 @@
 	position: relative;
 }
 
-.img-animation__img {}
+.img-animation__img {
+	opacity: 0;
+}
 
 .img-animation__bg {
 	position: absolute;
@@ -14,31 +16,33 @@
 	width: 100%;
 	height: 100%;
 	transform-origin: right center;
-	background-color: #408F95;
+	// background-color: #408F95;
+	background-color: transparent;
+	transform: scaleX(0);
 }
 
 // テスト用
-// .animation-test {
-// 	position: relative;
-// }
+.animation-test {
+	position: relative;
+}
 
-// .animation-box1,
-// .animation-box2 {
-// 	width: 100%;
-// 	height: 200px;
-// }
+.animation-box1,
+.animation-box2 {
+	width: 100%;
+	height: 200px;
+}
 
-// .animation-box1 {
-// 	background-color: red;
-// }
+.animation-box1 {
+	background-color: red;
+}
 
-// .animation-box2 {
-// 	transform-origin: right center;
-// 	background-color: blue;
+.animation-box2 {
+	transform-origin: right center;
+	background-color: blue;
 
-// 	position: absolute;
-// 	top: 0;
-// 	left: 0;
-// 	width: 100%;
-// 	height: 100%;
-// }
+	position: absolute;
+	top: 0;
+	left: 0;
+	width: 100%;
+	height: 100%;
+}
