--- a/src/sass/module/_button.scss
+++ b/src/sass/module/_button.scss
@@ -14,11 +14,29 @@
 	font-weight: bold;
 
 	transition: background-color 0.3s;
+	z-index: 1;
 
 }
 
-.button:hover {
+.button::after {
+	position: absolute;
+	top: 0;
+	left: 0;
+	content: '';
+	width: 100%;
+	height: 100%;
 	background-color: $color-white;
+	transform: scale(0, 1);
+	transform-origin: left top;
+	transition: .2s cubic-bezier(0.45, 0, 0.55, 1);
+	z-index: -1;
+}
+
+.button:hover {
+
+	&::after {
+		transform: scale(1, 1);
+	}
 
 	p {
 		color: $color-accent;
@@ -39,8 +57,9 @@
 	height: 100%;
 	border: 1px solid $color-accent;
 	content: '';
-	z-index: -1;
+	z-index: -2;
 }
+
 
 .button p {
 	position: relative;
