--- a/src/sass/page/_pc-nav.scss
+++ b/src/sass/page/_pc-nav.scss
@@ -8,6 +8,10 @@
 	align-items: center;
 	justify-content: center;
 
+	@include mq('md') {
+		column-gap: rem(16);
+	}
+
 }
 
 .pc-nav__item {
@@ -29,8 +33,8 @@
 
 	@include mq('md') {
 
-		padding-left: rem(20);
-		padding-right: rem(20);
+		padding-left: rem(12);
+		padding-right: rem(12);
 	}
 }
 
