ピクパ：途中

--- a/src/sass/module/_blog-cards.scss
+++ b/src/sass/module/_blog-cards.scss
@@ -6,6 +6,7 @@
 	margin-right: auto;
 
 	@include mq('md') {
+		margin-top: rem(85);
 		display: flex;
 		column-gap: rem(40);
 		justify-content: space-between;
