--- a/src/sass/module/_blog-cards.scss
+++ b/src/sass/module/_blog-cards.scss
@@ -7,9 +7,10 @@
 
 	@include mq('md') {
 		margin-top: rem(85);
-		display: flex;
+		display: grid;
 		column-gap: rem(40);
 		justify-content: space-between;
+		grid-template-columns: repeat(3, 1fr);
 
 		max-width: initial;
 		margin-left: initial;
