--- a/src/sass/module/_to-top.scss
+++ b/src/sass/module/_to-top.scss
@@ -3,13 +3,12 @@
 .to-top {
 	position: fixed;
 	right: rem(15);
-	bottom: rem(16);
+	// bottom: rem(16);
 	width: rem(48);
 	height: rem(48);
 	border: 1px solid $color-accent;
 	border-radius: 50%;
 	background-color: transparent;
-	box-shadow: 4px 0 4px rgba($color: #000, $alpha: 0.25);
 	z-index: $z-index-toTop;
 	transform: rotate(90deg) scaleY(-1);
 
@@ -17,6 +16,7 @@
 		right: rem(20);
 		width: rem(80);
 		height: rem(80);
+		box-shadow: 4px 0 4px rgba($color: #000, $alpha: 0.25);
 	}
 }
 
