--- a/src/sass/module/_voice-card.scss
+++ b/src/sass/module/_voice-card.scss
@@ -53,7 +53,7 @@
 	padding: rem(8) rem(11);
 
 	@include mq('md') {
-		padding: rem(4) rem(16);
+		padding: rem(5) rem(15);
 	}
 }
 
@@ -72,12 +72,13 @@
 
 .voice-card__title {
 	margin-top: rem(4);
-	padding-bottom: rem(2);
+	padding-bottom: rem(5);
 	position: relative;
 	// height: 100%;
 
 	@include mq('md') {
 		margin-top: rem(8);
+		padding-bottom: rem(2);
 	}
 }
 
@@ -96,7 +97,7 @@
 	font-size: rem(16);
 	font-weight: $font-weight-medium;
 	letter-spacing: 0;
-	line-height: calc(24 / 16);
+	line-height: calc(23 / 16);
 	color: $color-text;
 
 	@include mq('md') {
@@ -113,6 +114,7 @@
 
 	@include mq('md') {
 		// margin-left: rem(16);
+		width: calc(180 / 472 * 100%);
 	}
 }
 
@@ -136,6 +138,10 @@
 
 .voice-card__body {
 	margin-top: rem(15);
+
+	@include mq('md') {
+		margin-top: rem(40);
+	}
 }
 
 .voice-card__text {}
