--- a/src/sass/page/_contact.scss
+++ b/src/sass/page/_contact.scss
@@ -1,21 +1,32 @@
 @use "global" as *;
 
 .contact {
-	padding-top: rem(54);
-	padding-bottom: rem(100);
+	padding-top: rem(80);
+	padding-bottom: rem(103);
+	position: relative;
 
 	@include mq('md') {
-		margin-top: rem(140);
-		margin-bottom: rem(160);
-		position: relative;
+		padding-top: rem(137);
+		padding-bottom: rem(160);
 	}
 }
 
 .contact::before {
+	position: absolute;
+	content: "";
+	top: rem(54);
+	right: max(rem(15), 50vw - rem(173));
+	width: rem(109);
+	height: rem(50);
+	background-image: url('../images/common/img-fish.svg');
+	background-repeat: no-repeat;
+	background-size: contain;
+	background-position: center center;
+
 	@include mq('md') {
 		position: absolute;
 		content: "";
-		top: rem(-40);
+		top: rem(97);
 		right: max(rem(20), 50vw - rem(670));
 		width: rem(301);
 		height: rem(138);
@@ -41,7 +52,7 @@
 		display: flex;
 		justify-content: space-between;
 		position: relative;
-		box-shadow: 0 4px 4px rgba($color: #000, $alpha: 0.25);
+		box-shadow: 4px 4px 10px rgba($color: #000, $alpha: 0.25);
 	}
 }
 
@@ -80,8 +91,16 @@
 }
 
 .contact__logoBlock {
-	padding-bottom: rem(6);
+	padding-bottom: rem(1);
 	text-align: center;
+
+	@include mq('md') {
+		padding-bottom: rem(3);
+	}
+}
+
+.contact__logoBlock.title-line::after {
+	box-shadow: 0 4px 4px rgba($color: #000, $alpha: 0.25);
 }
 
 .contact__logo {
@@ -151,31 +170,40 @@
 }
 
 .contact__bottom {
-	margin-top: rem(40);
+	margin-top: rem(42);
 
 	@include mq('md') {
-		margin-top: rem(20);
+		margin-top: rem(22);
 		// padding-left: rem(81);
 		// padding-left: calc(80 / 1080 * 100%);
 		max-width: rem(315);
 	}
 }
 
+// .contact-title.section-title {
+// 	text-shadow: 0 4px 4px rgba($color: #000, $alpha: 0.25);
+// }
+
 .contact__title .section-title__eng {
 	font-size: rem(80);
+	text-shadow: 0 4px 4px rgba($color: #000, $alpha: 0.25);
 }
 
 .contact__title .section-title__ja {
+	margin-top: rem(-4);
 	text-shadow: 0 4px 4px rgba($color: #000, $alpha: 0.25);
 
 	@include mq('md') {
-		margin-top: rem(-6);
+		margin-top: rem(-5);
 		text-shadow: none;
 	}
 }
 
 .contact__msg {
-	margin-top: rem(8);
+	margin-top: rem(10);
+	@include mq('md') {
+		margin-top: rem(11);
+	}
 }
 
 .contact__msg-text {
@@ -197,4 +225,8 @@
 .contact__btn {
 	margin-top: rem(40);
 	text-align: center;
+}
+
+.contact__btn.button::before {
+	box-shadow: 0 4px 4px rgba($color: #000, $alpha: 0.25);
 }
