--- a/src/sass/page/_voice.scss
+++ b/src/sass/page/_voice.scss
@@ -5,7 +5,8 @@
 	padding-bottom: rem(83);
 
 	@include mq('md') {
-		margin-top: rem(61);
+		padding-top: rem(140);
+		padding-bottom: rem(143);
 		position: relative;
 	}
 }
@@ -14,7 +15,7 @@
 	@include mq('md') {
 		position: absolute;
 		content: "";
-		top: rem(-117);
+		top: rem(19);
 		left: max(rem(40), calc(50vw - rem(620)));
 		width: rem(301);
 		height: rem(138);
