--- a/src/sass/page/_footer.scss
+++ b/src/sass/page/_footer.scss
@@ -14,15 +14,16 @@
 .footer__inner {}
 
 
-.footer__nav {}
+.footer__ft-nav {}
 
 .footer__head {
-	// margin-left: min(4px + (100vw - 23.4375rem) * 0.5, 2.5rem);
-	width: rem(333);
-	// width: min(rem(333) + (100vw - rem(333)));
-	width: min(rem(333) + (100vw - rem(375)) / 2, rem(369));
+	// width: rem(333);
+	// width: min(rem(333) + (100vw - rem(375)) / 2, rem(369));
 	margin-left: auto;
 	margin-right: auto;
+	padding-left: $padding-sp;
+	padding-right: $padding-sp;
+	max-width: rem(415);
 
 	@include mq('md') {
 		// margin-bottom: rem(8);
@@ -41,10 +42,12 @@
 	}
 }
 
-.footer__sns {}
+.footer__sns {
+
+	margin-top: rem(16);
+}
 
 .footer__sns-items {
-	margin-top: rem(18.25);
 	display: flex;
 	column-gap: rem(16);
 
@@ -66,18 +69,18 @@
 
 .footer__sns-link {}
 
-.footer__nav-inner {}
+.footer__sp-nav-inner {}
 
-.footer__nav-wrap.nav__wrap {
-	margin-top: rem(40);
+.footer__sp-nav-wrap {
+	// margin-top: rem(40);
 
-	@include mq('md') {
-		margin-top: rem(16);
-	}
+	// @include mq('md') {
+	// 	margin-top: rem(16);
+	// }
 }
 
 .footer__copyright {
-	margin-top: rem(40);
+	margin-top: rem(33);
 	padding-left: rem(14);
 	padding-right: rem(14);
 	text-align: center;
