フォント関係：修正

--- a/src/sass/global/_setting.scss
+++ b/src/sass/global/_setting.scss
@@ -51,3 +51,8 @@ $z-index-toTop: 100;
 $z-index-header: 1000;
 $z-index-sp-nav: 2000;
 $z-index-hamburger: 2900;
+
+////////////////////
+// opacity
+////////////////////
+$opacity-hover: 0.7;
