--- a/src/sass/module/_text.scss
+++ b/src/sass/module/_text.scss
@@ -1,6 +1,6 @@
 @use "global" as *;
 
-text {
+.text {
 	font-family: $font-family-jp-sans;
 	font-size: rem(16);
 	font-weight: $font-weight-regular;
