--- a/src/sass/page/_sp-nav.scss
+++ b/src/sass/page/_sp-nav.scss
@@ -1,7 +1,6 @@
 @use "global" as *;
 
-.sp-nav {
-}
+.sp-nav {}
 
 .sp-nav__logoBlock {
 	margin-top: rem(21);
@@ -43,6 +42,7 @@
 
 	@include mq('md') {
 		margin-top: rem(16);
+		max-width: initial;
 	}
 }
 
@@ -57,8 +57,9 @@
 
 	@include mq('md') {
 		display: flex;
-		column-gap: rem(120);
-
+		// column-gap: rem(120);
+		// column-gap: min(rem(120), rem(120) + (100vw - 90rem) * 0.015);
+		column-gap: min(7.5rem, 7.5rem + (100vw - 90rem) * 0.04);
 	}
 }
 
